--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "@nestjs/swagger": "github:nestjs/swagger",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@prisma/client": "^6.8.2",
     "@types/cache-manager": "^4.0.6",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
