Implemented User Profile Management

--- a/backend/package.json
+++ b/backend/package.json
@@ -75,8 +75,9 @@
     "@nestjs/testing": "^11.0.10",
     "@types/babel__core": "^7.20.5",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
