--- a/backend/package.json
+++ b/backend/package.json
@@ -62,6 +62,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
+    "prisma": "^6.8.2",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
