--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,7 @@
     "handlebars": "^4.7.8",
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5",
     "nodemailer": "^6.10.0",
     "nodemailer-express-handlebars": "^7.0.0",
     "passport": "^0.7.0",
@@ -79,6 +80,7 @@
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -95,7 +97,7 @@
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.3.4",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
