--- a/backend/package.json
+++ b/backend/package.json
@@ -1,123 +1,128 @@
 {
-  "name": "scav-tools-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "setup:env": "cpy .env.example .env",
-    "validate:env": "ts-node config/env.validation.ts",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
-    "migration:generate": "npm run typeorm -- migration:generate -d ./src/data-source.ts src/migrations/InitialMigration",
-    "migration:run": "npm run typeorm -- migration:run -d ./src/data-source.ts"
-  },
-  "dependencies": {
-    "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/axios": "^4.0.0",
-    "@nestjs/cache-manager": "^3.0.0",
-    "@nestjs/common": "^11.1.0",
-    "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.10",
-    "@nestjs/event-emitter": "^3.0.1",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.10",
-    "@nestjs/schedule": "^5.0.1",
-    "@nestjs/swagger": "github:nestjs/swagger",
-    "@nestjs/throttler": "^6.4.0",
-    "@nestjs/typeorm": "^11.0.0",
-    "@prisma/client": "^6.8.2",
-    "@types/cache-manager": "^4.0.6",
-    "axios": "^1.8.1",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "cache-manager": "^6.0.0",
-    "cache-manager-redis-store": "^3.0.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
-    "ethers": "^6.13.5",
-    "google-auth-library": "^9.15.1",
-    "handlebars": "^4.7.8",
-    "ioredis": "^5.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "nanoid": "^5.1.5",
-    "nodemailer": "^6.10.0",
-    "nodemailer-express-handlebars": "^7.0.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.13.3",
-    "prisma": "^6.8.2",
-    "redis": "^4.7.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.22",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^11.0.10",
-    "@types/babel__core": "^7.20.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.2",
-    "@types/jest": "^29.5.14",
-    "@types/multer": "^1.4.12",
-    "@types/nanoid": "^2.1.0",
-    "@types/node": "^20.3.1",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
-    "@types/supertest": "^6.0.0",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "cpy-cli": "^5.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.3.4",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+	"name": "scav-tools-backend",
+	"version": "0.0.1",
+	"type": "commonjs",
+	"description": "",
+	"author": "",
+	"private": true,
+	"license": "UNLICENSED",
+	"scripts": {
+		"build": "nest build",
+		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+		"start": "nest start",
+		"setup:env": "cpy .env.example .env",
+		"validate:env": "ts-node config/env.validation.ts",
+		"start:dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start:prod": "node dist/main",
+		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:cov": "jest --coverage",
+		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli",
+		"migration:generate": "npm run typeorm -- migration:generate -d ./src/data-source.ts src/migrations/InitialMigration",
+		"migration:run": "npm run typeorm -- migration:run -d ./src/data-source.ts"
+	},
+	"dependencies": {
+		"@nestjs-modules/mailer": "^2.0.2",
+		"@nestjs/axios": "^4.0.0",
+		"@nestjs/cache-manager": "^3.0.0",
+		"@nestjs/common": "^11.1.2",
+		"@nestjs/config": "^4.0.2",
+		"@nestjs/core": "^11.1.2",
+		"@nestjs/event-emitter": "^3.0.1",
+		"@nestjs/jwt": "^11.0.0",
+		"@nestjs/mapped-types": "*",
+		"@nestjs/passport": "^11.0.5",
+		"@nestjs/platform-express": "^11.0.10",
+		"@nestjs/schedule": "^5.0.1",
+		"@nestjs/swagger": "github:nestjs/swagger",
+		"@nestjs/throttler": "^6.4.0",
+		"@nestjs/typeorm": "^11.0.0",
+		"@prisma/client": "^6.8.2",
+		"@types/cache-manager": "^4.0.6",
+		"axios": "^1.8.1",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
+		"cache-manager": "^6.0.0",
+		"cache-manager-redis-store": "^3.0.1",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
+		"dotenv": "^16.4.7",
+		"ejs": "^3.1.10",
+		"ethers": "^6.13.5",
+		"google-auth-library": "^9.15.1",
+		"handlebars": "^4.7.8",
+		"highlight.js": "^11.11.1",
+		"ioredis": "^5.5.0",
+		"jsonwebtoken": "^9.0.2",
+		"markdown-it": "^14.1.0",
+		"nanoid": "^5.1.5",
+		"nodemailer": "^6.10.0",
+		"nodemailer-express-handlebars": "^7.0.0",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"passport-local": "^1.0.0",
+		"pg": "^8.13.3",
+		"prisma": "^6.8.2",
+		"puppeteer": "^24.10.0",
+		"redis": "^4.7.0",
+		"reflect-metadata": "^0.2.2",
+		"rxjs": "^7.8.2",
+		"swagger-ui-express": "^5.0.1",
+		"typeorm": "^0.3.22",
+		"uuid": "^11.1.0"
+	},
+	"devDependencies": {
+		"@nestjs/cli": "^10.0.0",
+		"@nestjs/schematics": "^10.0.0",
+		"@nestjs/testing": "^11.0.10",
+		"@types/babel__core": "^7.20.5",
+		"@types/bcrypt": "^5.0.2",
+		"@types/express": "^5.0.2",
+		"@types/jest": "^29.5.14",
+		"@types/markdown-it": "^14.1.2",
+		"@types/multer": "^1.4.12",
+		"@types/nanoid": "^2.1.0",
+		"@types/node": "^20.3.1",
+		"@types/passport-jwt": "^4.0.1",
+		"@types/passport-local": "^1.0.38",
+		"@types/supertest": "^6.0.0",
+		"@types/uuid": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "^8.0.0",
+		"@typescript-eslint/parser": "^8.0.0",
+		"cpy-cli": "^5.0.0",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.0.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"jest": "^29.5.0",
+		"prettier": "^3.0.0",
+		"source-map-support": "^0.5.21",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.3.4",
+		"ts-loader": "^9.4.3",
+		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.1.3"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"rootDir": "src",
+		"testRegex": ".*\\.spec\\.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"collectCoverageFrom": [
+			"**/*.(t|j)s"
+		],
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
+	}
 }
