feat: add rate limiting environment variables

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -29,3 +29,10 @@ ENABLE_DETAILED_LOGGING=true
 CONTRACT_ADDRESS=
 CONTRACT_ABI=
 ADMIN_SIGNER=
+
+# Rate Limiting Configuration
+PDF_RATE_LIMIT_WINDOW_MS=60000         
+PDF_RATE_LIMIT_MAX_REQUESTS=20         
+PDF_RATE_LIMIT_TRACK_BY_USER=true  
+
+DATABASE_URL=postgresql://postgres:password@localhost:5432/scavtools
